# mimic1-cstr_upc_upm_spanish_hts

./: .gitmodules  ACKNOWLEDGEMENTS  COPYING  meson.build
include/: cstr_upc_upm_spanish_hts.h
src/: cstr_upc_upm_spanish_hts.c  cstr_upc_upm_spanish_hts_plugin.c
